--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
-
+<div class="margin">
+    <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
