--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<div class="bg-orange">
+  <div class="container">
     <footer class="py-3 my-4">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
@@ -10,3 +11,4 @@
       <p class="text-center text-body-secondary">&copy; 2023 Company, Inc</p>
     </footer>
   </div>
+</div>
