--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg fixed-top bg-orange">
   <div class="container container-fluid">
-    <a class="navbar-brand" href="/home">Sala de Juegos</a>
+
+    <a class="navbar-brand" href="#">
+      <img src="assets/logo/logo.png" alt="Logo" class="d-inline-block align-text-top">
+    </a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -11,10 +15,10 @@
           <a class="nav-link active" aria-current="page" href="/home">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about">¿Quien Soy?</a>
+          <a class="nav-link active" href="/about">¿Quien Soy?</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Juegos
           </a>
           <ul class="dropdown-menu">
@@ -33,7 +37,7 @@
           <a class="nav-link" href="/auth/login">Ingresá</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-success" routerLink="/registro">Creá tu cuenta</a>
+          <a class="nav-link btn btn-success" routerLink="/registro">Creá tu cuenta</a>
         </li>
       </ul>
     </div>
