--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -1,36 +1,56 @@
-<div class="container">
-  <div class="displayTable">
-    <div class="displayTableCell">
-      <div class="authBlock">
-        <h3>Sign In</h3>
-        <div class="formGroup">
-          <input type="text" class="formControl" placeholder="Username" #userName required>
+<div class="row p-5">
+  <div class="col-sm-3">
+
+  </div>
+  <div class="col-sm-6 center">
+    <div class="displayTable">
+      <div class="displayTableCell">
+        <div class="authBlock">
+          <h3 class="center">Sign In</h3>
+
+          <div class="formGroup mt-2">
+            <input type="text" class="form-control" placeholder="Username" aria-label="userName" #userName required>
+          </div>
+          <div class="formGroup mt-2">
+            <input type="password" class="form-control" placeholder="Password" aria-label="userPassword" #userPassword
+              required>
+          </div>
+
+          <!-- Calling SignIn Api from AuthService -->
+          <div class="formGroup mt-2">
+            <button class="w-100 btn btn-lg btn-primary"
+              (click)="authService.SignIn(userName.value, userPassword.value)" type="submit">Sign in
+            </button>
+          </div>
+
+          <!-- Calling GoogleAuth Api from AuthService -->
+          <div class="formGroup mt-2">
+            <button class="w-100 btn btn-lg btn-danger" (click)="authService.GoogleAuth()" type="submit">
+              Log in with Google
+            </button>
+
+          </div>
+
+          <div class="forgotPassword">
+            <p><a routerLink="/forgot-password"
+                class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Forgot
+                Password?</a></p>
+          </div>
+
         </div>
-        <div class="formGroup">
-          <input type="password" class="formControl" placeholder="Password" #userPassword required>
+
+        <div class="redirectToLogin">
+          <span>Don't have an account?<span class="redirect">
+              <p><a routerLink="/sign-up"
+                  class="link-info link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover">Sign Up</a>
+              </p>
+            </span></span>
         </div>
-        <!-- Calling SignIn Api from AuthService -->
-        <div class="formGroup">
-          <input type="button" class="btn btnPrimary" value="Log in"
-            (click)="authService.SignIn(userName.value, userPassword.value)">
-        </div>
-        <div class="formGroup">
-          <span class="or"><span class="orInner">Or</span></span>
-        </div>
-        <!-- Calling GoogleAuth Api from AuthService -->
-        <div class="formGroup">
-          <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
-            <i class="fab fa-google-plus-g"></i>
-            Log in with Google
-          </button>
-        </div>
-        <div class="forgotPassword">
-          <span routerLink="/forgot-password">Forgot Password?</span>
-        </div>
-      </div>
-      <div class="redirectToLogin">
-        <span>Don't have an account?<span class="redirect" routerLink="/register-user"> Sign Up</span></span>
+
       </div>
     </div>
+  </div>
+  <div class="col-sm-3">
+
   </div>
 </div>
