--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container bg-grey px-4 py-5">
-    <h2 class="pb-2 border-bottom">Features with title</h2>
+    <h2 class="pb-2 border-bottom">¿Quieres Jugar?</h2>
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
@@ -12,45 +12,28 @@
         <div class="col">
             <div class="row row-cols-1 row-cols-sm-2 g-4">
                 <div class="col d-flex flex-column gap-2">
-                    <div
-                        class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#collection" />
-                        </svg>
-                    </div>
-                    <h4 class="fw-semibold mb-0">Featured title</h4>
-                    <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+
+                  <img src="assets/icons/juego-del-ahorcado.png" srcset="">
+
+                    <h4 class="fw-semibold mb-0">Ahorcado</h4>
+                    <p class="text-body-secondary">El clásico juego de ahorcado que jugabas en el colegio, todos lo jugamos alguna vez.</p>
                 </div>
 
                 <div class="col d-flex flex-column gap-2">
-                    <div
-                        class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#gear-fill" />
-                        </svg>
-                    </div>
-                    <h4 class="fw-semibold mb-0">Featured title</h4>
-                    <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+                  <img src="assets/icons/esquema-de-naipes-de-corazon.png" srcset="">
+             
+                    <h4 class="fw-semibold mb-0">Mayor o Menor</h4>
+                    <p class="text-body-secondary">Un juego de naipes a puro azar, jugatela y elegí mayor o menor, ya!!.</p>
                 </div>
 
                 <div class="col d-flex flex-column gap-2">
-                    <div
-                        class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#speedometer" />
-                        </svg>
-                    </div>
-                    <h4 class="fw-semibold mb-0">Featured title</h4>
-                    <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+                  <img src="assets/icons/signo-de-interrogacion.png" srcset="">
+                    <h4 class="fw-semibold mb-0">Preguntados</h4>
+                    <p class="text-body-secondary">El juego que es furor en internet donde pondrás aprueba tu conocimiento.</p>
                 </div>
 
                 <div class="col d-flex flex-column gap-2">
-                    <div
-                        class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary bg-gradient fs-4 rounded-3">
-                        <svg class="bi" width="1em" height="1em">
-                            <use xlink:href="#table" />
-                        </svg>
-                    </div>
+                  <img src="assets/icons/mano.png" srcset="">
                     <h4 class="fw-semibold mb-0">Featured title</h4>
                     <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
                 </div>
