--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -8,7 +8,7 @@
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
       </ul>
-      <p class="text-center text-body-secondary">&copy; 2023 Company, Inc</p>
+      <p class="text-center text-body-secondary">&copy; 2023 Daniel de Brito, dev</p>
     </footer>
   </div>
 </div>
