--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg fixed-top bg-orange">
   <div class="container container-fluid">
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" routerLink="/home">
       <img src="assets/logo/logo.png" alt="Logo" class="d-inline-block align-text-top">
     </a>
 
@@ -12,32 +12,32 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/home">Inicio</a>
+          <a class="nav-link active" aria-current="page" routerLink="/home">Inicio</a>
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Juegos
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="games/ahorcado">Ahorcado</a></li>
-            <li><a class="dropdown-item" href="games/mayormenor">Mayor o Menor</a></li>
-            <li><a class="dropdown-item" href="games/preguntados">Preguntados</a></li>
+            <li><a class="dropdown-item" routerLink="/games/ahorcado">Ahorcado</a></li>
+            <li><a class="dropdown-item" routerLink="/games/mayormenor">Mayor o Menor</a></li>
+            <li><a class="dropdown-item" routerLink="/games/preguntados">Preguntados</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
-            <li><a class="dropdown-item" href="#">Puntuacion</a></li>
+            <li><a class="dropdown-item" routerLink="#">Puntuacion</a></li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="chat" target="_blank">Chat</a>
+          <a class="nav-link active" routerLink="/chat">Chat</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="assets/files/consigna.pdf" target="_blank">Consigna TP</a>
+          <a class="nav-link active" routerLink="/assets/files/consigna.pdf" target="_blank">Consigna TP</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/about">¿Quien Soy?</a>
+          <a class="nav-link active" routerLink="/about">¿Quien Soy?</a>
         </li>
       </ul>
 
@@ -47,7 +47,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             {{ authService.userData.email }}
           </a>
@@ -61,10 +61,10 @@
       <ng-template #login>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item">
-            <a class="nav-link" href="/sign-in">Ingresá</a>
+            <a class="nav-link" routerLink="/sign-in">Ingresá</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link btn btn-success" href="/sign-up">Creá tu cuenta</a>
+            <a class="nav-link btn btn-success" routerLink="/sign-up">Creá tu cuenta</a>
           </li>
         </ul>
       </ng-template>
