--- a/src/app/pages/games/ahorcado/ahorcado.component.html
+++ b/src/app/pages/games/ahorcado/ahorcado.component.html
@@ -1,1 +1,49 @@
-<p>ahorcado works!</p>
+<div class="container">
+    <div class="row">
+        <div *ngIf="cantIntentos == 0" class="col-sm-12">
+            <h1>{{ palabra }}</h1>
+        </div>
+        <div class="col-sm-12">
+            <h1>{{ palabraTipeada }}</h1>
+        </div>
+        <div class="col-sm-12">
+            <h1> {{ mensaje }} {{ cantIntentos }}  Intentos</h1>
+        </div>
+        <div class="teclado col-sm-9 mt-3 p-3">
+            <div class="row mt-1">
+                <div class="col"><a class="myButton" (click)="LetraTipeada('Q')">Q</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('W')">W</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('E')">E</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('R')">R</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('T')">T</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('Y')">Y</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('U')">U</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('I')">I</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('O')">O</a></div>
+                <div class="col"><a class="myButton" (click)="LetraTipeada('P')">P</a></div>
+            </div>
+            <div class="row mt-1">
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('A')">A</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('S')">S</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('D')">D</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('F')">F</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('G')">G</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('H')">H</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('J')">J</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('K')">K</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('L')">L</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('Ñ')">Ñ</a></div>
+            </div>
+            <div class="row mt-1">
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('Z')">Z</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('X')">X</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('C')">C</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('V')">V</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('B')">B</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('N')">N</a></div>
+                <div class="col"> <a class="myButton" (click)="LetraTipeada('M')">M</a></div>
+                <div class="col"> <a class="myButton" (click)="ResetJuego()">REINICIAR</a></div>
+            </div>
+        </div>
+    </div>
+</div>
