--- a/src/app/pages/games/mayormenor/mayormenor.component.html
+++ b/src/app/pages/games/mayormenor/mayormenor.component.html
@@ -1,1 +1,16 @@
-<p>mayormenor works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <img src="../../../../assets/juegos/mayormenor/asart-naipes-dorso-minimalart.png" alt="" srcset="">
+        </div>
+        <div class="col-sm-4">
+            <img src="../../../../assets/juegos/mayormenor/asart-naipes-dorso-minimalart.png" alt="" srcset="">
+        </div>
+        <div class="col-sm-4">
+            <div class="mt-5 row">
+                <div class="mt-5 col-sm-12"><a href="#" class="myButton">MAYOR</a></div>
+                <div class="mt-5 col-sm-12"><a href="#" class="myButton">MENOR</a></div>
+            </div>
+        </div>
+    </div>
+</div>
