--- a/src/app/pages/games/ahorcado/ahorcado.component.html
+++ b/src/app/pages/games/ahorcado/ahorcado.component.html
@@ -1,13 +1,38 @@
 <div class="container">
     <div class="row">
-        <div *ngIf="cantIntentos == 0" class="col-sm-12">
-            <h1>{{ palabra }}</h1>
+        <div class="row">
+            <div *ngIf="cantIntentos == 5" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/1.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div *ngIf="cantIntentos == 4" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/2.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div *ngIf="cantIntentos == 3" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/3.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div *ngIf="cantIntentos == 2" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/4.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div *ngIf="cantIntentos == 1" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/5.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div *ngIf="cantIntentos == 0" class="col-sm-6">
+                <img src="assets/juegos/ahorcado/6.jpg" alt="ahorcado_imagen_1" srcset="">
+            </div>
+            <div class="col-sm-6">
+                <div *ngIf="cantIntentos == 0" class="mt-5 col-sm-12">
+                    <h1>Perdiste!! la palabra era : {{ palabra }}</h1>
+                </div>
+                <div  *ngIf="cantIntentos != 0" class="mt-5 col-sm-12">
+                    <p class="fs-1">{{ palabraTipeada }}</p>
+                </div>
+                <div  *ngIf="esGanador" class="mt-5 col-sm-12">
+                    <p class="fs-1">Ganaste !!!!! </p>
+                </div>
+            </div>
         </div>
         <div class="col-sm-12">
-            <h1>{{ palabraTipeada }}</h1>
-        </div>
-        <div class="col-sm-12">
-            <h1> {{ mensaje }} {{ cantIntentos }}  Intentos</h1>
+            <h1> Te quedan {{ cantIntentos }} Intentos</h1>
         </div>
         <div class="teclado col-sm-9 mt-3 p-3">
             <div class="row mt-1">
