--- a/src/app/pages/games/mayormenor/mayormenor.component.html
+++ b/src/app/pages/games/mayormenor/mayormenor.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="mt-5 container">
     <div class="row">
         <div class="col-sm-4">
             <img src="../../../../assets/juegos/mayormenor/asart-naipes-dorso-minimalart.png" alt="" srcset="">
         </div>
         <div class="col-sm-4">
-            <img src="../../../../assets/juegos/mayormenor/asart-naipes-dorso-minimalart.png" alt="" srcset="">
+            <img src="{{cartaAleatoria.url}}" alt="" srcset="">
         </div>
         <div class="col-sm-4">
             <div class="mt-5 row">
