--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,131 +1,147 @@
 <div class="container bg-grey px-4 py-5">
-    <h2 class="pb-2 border-bottom">¿Quieres Jugar?</h2>
+  <h2 class="pb-2 border-bottom">¿Quieres Jugar?</h2>
 
-    <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
-        <div class="col d-flex flex-column align-items-start gap-2">
-            <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
-            <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading. We'll add onto
-                it with another sentence and probably just keep going until we run out of words.</p>
-            <a href="#" class="btn btn-primary btn-lg">Primary button</a>
-        </div>
-
-        <div class="col">
-            <div class="row row-cols-1 row-cols-sm-2 g-4">
-                <div class="col d-flex flex-column gap-2">
-
-                  <img src="assets/icons/juego-del-ahorcado.png" srcset="">
-
-                    <h4 class="fw-semibold mb-0">Ahorcado</h4>
-                    <p class="text-body-secondary">El clásico juego de ahorcado que jugabas en el colegio, todos lo jugamos alguna vez.</p>
-                </div>
-
-                <div class="col d-flex flex-column gap-2">
-                  <img src="assets/icons/esquema-de-naipes-de-corazon.png" srcset="">
-             
-                    <h4 class="fw-semibold mb-0">Mayor o Menor</h4>
-                    <p class="text-body-secondary">Un juego de naipes a puro azar, jugatela y elegí mayor o menor, ya!!.</p>
-                </div>
-
-                <div class="col d-flex flex-column gap-2">
-                  <img src="assets/icons/signo-de-interrogacion.png" srcset="">
-                    <h4 class="fw-semibold mb-0">Preguntados</h4>
-                    <p class="text-body-secondary">El juego que es furor en internet donde pondrás aprueba tu conocimiento.</p>
-                </div>
-
-                <div class="col d-flex flex-column gap-2">
-                  <img src="assets/icons/mano.png" srcset="">
-                    <h4 class="fw-semibold mb-0">Featured title</h4>
-                    <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
-                </div>
-            </div>
-        </div>
+  <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+    <div class="col d-flex flex-column align-items-start gap-2">
+      <h3 class="fw-bold">Left-aligned title explaining these awesome features</h3>
+      <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading. We'll add onto
+        it with another sentence and probably just keep going until we run out of words.</p>
+      <a href="#" class="btn btn-primary btn-lg">Primary button</a>
     </div>
+
+    <div class="col">
+      <div class="row row-cols-1 row-cols-sm-2 g-4">
+        <div class="col d-flex flex-column gap-2">
+
+          <a routerLink="/games/ahorcado">
+            <img src="assets/icons/juego-del-ahorcado.png" srcset="">
+          </a>
+          <a class="links" routerLink="/games/ahorcado">
+            <h4 class="fw-semibold mb-0">Ahorcado</h4>
+          </a>
+          <p class="text-body-secondary">El clásico juego de ahorcado que jugabas en el colegio, todos lo jugamos alguna
+            vez.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <a routerLink="/games/mayormenor">
+            <img src="assets/icons/esquema-de-naipes-de-corazon.png" srcset="">
+          </a>
+          <a class="links" routerLink="/games/mayormenor">
+            <h4 class="fw-semibold mb-0">Mayor o Menor</h4>
+          </a>
+          <p class="text-body-secondary">Un juego de naipes a puro azar, jugatela y elegí mayor o menor, ya!!.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <a routerLink="/games/preguntados">
+            <img src="assets/icons/signo-de-interrogacion.png" srcset="">
+          </a>
+          <a class="links" routerLink="/games/preguntados">
+            <h4 class="fw-semibold mb-0">Preguntados</h4>
+          </a>
+          <p class="text-body-secondary">El juego que es furor en internet donde pondrás aprueba tu conocimiento.</p>
+        </div>
+
+        <div class="col d-flex flex-column gap-2">
+          <a>
+            <img src="assets/icons/mano.png" srcset="">
+          </a>
+          <a class="links">
+            <h4 class="fw-semibold mb-0">Featured title</h4>
+          </a>
+          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </div>
 
 
 <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="pb-2 border-bottom">Custom cards</h2>
-  
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-          style="background-image: url('unsplash-photo-1.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                  class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#geo-fill" />
-                </svg>
-                <small>Earth</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#calendar3" />
-                </svg>
-                <small>3d</small>
-              </li>
-            </ul>
-          </div>
+  <h2 class="pb-2 border-bottom">Custom cards</h2>
+
+  <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+    <div class="col">
+      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+        style="background-image: url('unsplash-photo-1.jpg');">
+        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+          <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Short title, long jacket</h3>
+          <ul class="d-flex list-unstyled mt-auto">
+            <li class="me-auto">
+              <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                class="rounded-circle border border-white">
+            </li>
+            <li class="d-flex align-items-center me-3">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#geo-fill" />
+              </svg>
+              <small>Earth</small>
+            </li>
+            <li class="d-flex align-items-center">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#calendar3" />
+              </svg>
+              <small>3d</small>
+            </li>
+          </ul>
         </div>
       </div>
-  
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-          style="background-image: url('unsplash-photo-2.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                  class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#geo-fill" />
-                </svg>
-                <small>Pakistan</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#calendar3" />
-                </svg>
-                <small>4d</small>
-              </li>
-            </ul>
-          </div>
+    </div>
+
+    <div class="col">
+      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+        style="background-image: url('unsplash-photo-2.jpg');">
+        <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+          <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Much longer title that wraps to multiple lines</h3>
+          <ul class="d-flex list-unstyled mt-auto">
+            <li class="me-auto">
+              <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                class="rounded-circle border border-white">
+            </li>
+            <li class="d-flex align-items-center me-3">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#geo-fill" />
+              </svg>
+              <small>Pakistan</small>
+            </li>
+            <li class="d-flex align-items-center">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#calendar3" />
+              </svg>
+              <small>4d</small>
+            </li>
+          </ul>
         </div>
       </div>
-  
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
-          style="background-image: url('unsplash-photo-3.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
-            <ul class="d-flex list-unstyled mt-auto">
-              <li class="me-auto">
-                <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
-                  class="rounded-circle border border-white">
-              </li>
-              <li class="d-flex align-items-center me-3">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#geo-fill" />
-                </svg>
-                <small>California</small>
-              </li>
-              <li class="d-flex align-items-center">
-                <svg class="bi me-2" width="1em" height="1em">
-                  <use xlink:href="#calendar3" />
-                </svg>
-                <small>5d</small>
-              </li>
-            </ul>
-          </div>
+    </div>
+
+    <div class="col">
+      <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg"
+        style="background-image: url('unsplash-photo-3.jpg');">
+        <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+          <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Another longer title belongs here</h3>
+          <ul class="d-flex list-unstyled mt-auto">
+            <li class="me-auto">
+              <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
+                class="rounded-circle border border-white">
+            </li>
+            <li class="d-flex align-items-center me-3">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#geo-fill" />
+              </svg>
+              <small>California</small>
+            </li>
+            <li class="d-flex align-items-center">
+              <svg class="bi me-2" width="1em" height="1em">
+                <use xlink:href="#calendar3" />
+              </svg>
+              <small>5d</small>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+</div>
