--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -16,14 +16,14 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Juegos
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" routerLink="/games/ahorcado">Ahorcado</a></li>
             <li><a class="dropdown-item" routerLink="/games/mayormenor">Mayor o Menor</a></li>
             <li><a class="dropdown-item" routerLink="/games/preguntados">Preguntados</a></li>
+            <li><a class="dropdown-item" routerLink="/games/tragamonedas">Tragamonedas</a></li>
             <li>
               <hr class="dropdown-divider">
             </li>
@@ -47,8 +47,7 @@
         </li>
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ authService.userData.email }}
           </a>
           <ul class="dropdown-menu">
