--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -44,13 +44,13 @@
         </div>
 
         <div class="col d-flex flex-column gap-2">
-          <a>
-            <img src="assets/icons/mano.png" srcset="">
+          <a routerLink="/games/tragamonedas">
+            <img src="assets/icons/tragamonedas.png" srcset="">
           </a>
-          <a class="links">
-            <h4 class="fw-semibold mb-0">Featured title</h4>
+          <a class="links" routerLink="/games/tragamonedas">
+            <h4 class="fw-semibold mb-0">Tragamonedas</h4>
           </a>
-          <p class="text-body-secondary">Paragraph of text beneath the heading to explain the heading.</p>
+          <p class="text-body-secondary">La famosa maquina tragamonedas, tira y probá suerte.</p>
         </div>
 
       </div>
