--- a/src/app/pages/games/tragamonedas/tragamonedas.component.html
+++ b/src/app/pages/games/tragamonedas/tragamonedas.component.html
@@ -1,13 +1,22 @@
 <div class="container">
-    <h2>Tragamonedas</h2>
-
-    <div class="carretes">
-        <div class="simbolo" *ngFor="let simbolo of carrete">{{ simbolo }}</div>
+    <div class="row">
+      <div class="col-sm-12">
+        <h2>Tragamonedas</h2>
+        <div class="carretes">
+          <div class="simbolo" *ngFor="let simbolo of carrete">{{ simbolo }}</div>
+        </div>
+      </div>
+      <div class="col-sm-12">
+        <button (click)="tirar()">¡Girar!</button>
+      </div>
+      <div class="mt-3 col-sm-12">
+        <div class="resultados">
+          <div class="resultado" *ngFor="let resultado of resultados">{{ resultado }}</div>
+        </div>
+      </div>
+      <div class="col-sm-12 mensaje">
+        {{ mensaje }}
+      </div>
     </div>
-
-    <button (click)="tirar()">¡Girar!</button>
-
-    <div class="resultados">
-        <div class="resultado" *ngFor="let resultado of resultados">{{ resultado }}</div>
-    </div>
-</div>
+  </div>
+  
