--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -163,7 +163,7 @@ a.dotted-link:hover {
     margin-bottom: 15px;
 }
 
-.header .profile-content .social a {
+.header .profile-content .social  {
     background: #b0b7bf;
     width: 36px;
     height: 36px;
@@ -176,11 +176,11 @@ a.dotted-link:hover {
     text-align: center;
 }
 
-.header .profile-content .social a:hover {
+.header .profile-content .social  {
     background: #778492;
 }
 
-.header .profile-content .social a .svg-inline--fa {
+.header .profile-content .social  .svg-inline--fa {
     font-size: 20px;
     margin-top: 8px;
 }
@@ -678,3 +678,78 @@ a.dotted-link:hover {
         max-width: inherit;
     }
 }
+
+
+
+
+@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
+
+a, a:hover {
+	text-decoration: none;
+}
+
+.socialbtns, .socialbtns ul, .socialbtns li {
+  margin: 0;
+  padding: 5px;
+}
+
+.socialbtns li {
+    list-style: none outside none;
+    display: inline-block;
+}
+
+.socialbtns .fa {
+	width: 40px;
+    height: 40px;
+	color: #000;
+	background-color: #FFF;
+	border: 1px solid #000;
+	padding-top: 12px;
+	border-radius: 22px;
+	-moz-border-radius: 22px;
+	-webkit-border-radius: 22px;
+	-o-border-radius: 22px;
+}
+
+.socialbtns .fa:hover {
+	color: #ffffff;
+	background-color: #000;
+	border: 1px solid #000;
+}
+
+
+
+.skills {
+    max-width: 38.75rem;
+    margin: auto;
+    text-align: center;
+    margin-top: 2.5rem;
+  }
+  
+  .skill-header {
+    margin-bottom: 1rem;
+  }
+  
+  .skills-wrapper img {
+    padding: 1.25rem;
+  }
+  
+  .icon {
+    width: 6.875rem;
+    height: 6.25rem;
+  }
+
+  
+  .icon-card {
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--secondary-shadow);
+    padding: 20px;
+    margin: 10px;
+  }
+  
+
+  .githubImg {
+    max-width: 150px;
+    height: auto;
+  }
